# textual-imageview

./: LICENSE.txt  README.md  pyproject.toml
textual_imageview/: app.py  img.py  viewer.py
textual_imgview/: __about__.py  __init__.py  app.py  img.py  viewer.py
